--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "lint": "standard",
-    "dev": "webpack serve",
-    "now-build": "npm run build"
+    "dev": "webpack-dev-server",
+    "now-build": "npm run build",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.2",
     "standard": "^16.0.3",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
