--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "lint": "standard",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --history-api-fallback",
     "now-build": "npm run build",
     "prepare": "husky install"
   },
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.5.3",
     "intersection-observer": "^0.12.0",
