--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "lint": "standard",
+    "serve:dev": "webpack --mode 'development' && npx serve dist -s",
     "dev": "webpack-dev-server --history-api-fallback",
     "now-build": "npm run build",
     "prepare": "husky install"
