--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0",
-    "webpack-pwa-manifest": "^4.3.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.3.0"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
