--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "cypress": "^8.3.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
     "standard": "^16.0.3",
