--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "test": "cypress open",
+    "build": "webpack --config webpack.prod.js",
     "lint": "standard",
-    "serve:dev": "webpack --mode 'development' && npx serve dist -s",
-    "dev": "webpack-dev-server --history-api-fallback",
+    "serve:dev": "webpack --mode 'development' --config webpack.prod.js && npx serve dist -s",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "now-build": "npm run build",
     "prepare": "husky install"
   },
@@ -35,6 +35,7 @@
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0",
+    "webpack-merge": "^5.8.0",
     "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^6.3.0"
   },
