--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@testing-library/react-hooks": "^7.0.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-jest": "^27.2.1",
     "babel-loader": "^8.2.2",
     "cypress": "^8.3.1",
+    "enzyme": "^3.11.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
@@ -47,6 +49,7 @@
     "jest-junit": "^12.2.0",
     "jest-transform-stub": "^2.0.0",
     "react-test-renderer": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
     "standard": "^16.0.3",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
@@ -60,7 +63,7 @@
     "@reach/router": "^1.3.4",
     "@s-ui/mono": "^2.18.0",
     "apollo-boost": "^0.4.9",
-    "graphql": "^15.5.3",
+    "graphql": "^15.6.0",
     "intersection-observer": "^0.12.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -93,6 +96,7 @@
     },
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
+      "!src/**/styles.{js,jsx}",
       "!**/node_modules/**",
       "!src/assets/**",
       "!src/pages/**"
