--- a/package.json
+++ b/package.json
@@ -36,17 +36,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@testing-library/react-hooks": "^7.0.2",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-jest": "^27.2.1",
     "babel-loader": "^8.2.2",
     "cypress": "^8.3.1",
-    "enzyme": "^3.11.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.1",
     "jest-html-reporter": "^3.4.1",
     "jest-junit": "^12.2.0",
+    "jest-prop-type-error": "^1.1.0",
     "jest-transform-stub": "^2.0.0",
     "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
@@ -61,7 +60,6 @@
   "dependencies": {
     "@apollo/client": "^3.4.13",
     "@reach/router": "^1.3.4",
-    "@s-ui/mono": "^2.18.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.6.0",
     "intersection-observer": "^0.12.0",
@@ -88,7 +86,8 @@
       "<rootDir>/src"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/jest/mocks/jest.setup.js"
+      "<rootDir>/jest/mocks/jest.setup.js",
+      "jest-prop-type-error"
     ],
     "testEnvironment": "jsdom",
     "transform": {
@@ -102,6 +101,7 @@
       "!src/App.js",
       "!src/index.js",
       "!src/Context.js",
+      "!src/styles/**",
       "!src/pages/**"
     ],
     "testMatch": [
