--- a/api/package.json
+++ b/api/package.json
@@ -15,11 +15,13 @@
     "apollo-server-express": "2.5.0",
     "bcrypt": "3.0.6",
     "cors": "2.8.5",
+    "dotenv": "^10.0.0",
     "express": "4.17.0",
     "express-jwt": "5.3.1",
     "graphql": "14.3.0",
     "jsonwebtoken": "8.5.1",
     "lowdb": "1.0.0",
+    "mongodb": "^4.1.2",
     "uuid": "3.3.2"
   },
   "devDependencies": {
